galoisbuffer/galois.h

extern int galois_single_multiply(int a, int b, int w);
extern int galois_single_divide(int a, int b, int w);
extern int galois_log(int value, int w);
extern int galois_ilog(int value, int w);
extern int galois_create_log_tables(int w);   
extern int galois_logtable_multiply(int x, int y, int w);
extern int galois_logtable_divide(int x, int y, int w);
extern int galois_create_mult_tables(int w);   
extern int galois_multtable_multiply(int x, int y, int w);
extern int galois_multtable_divide(int x, int y, int w);
extern int galois_shift_multiply(int x, int y, int w);
extern int galois_shift_divide(int x, int y, int w);
extern int galois_create_split_w8_tables(void);
extern int galois_split_w8_multiply(int x, int y);
extern int galois_inverse(int x, int w);
extern int galois_shift_inverse(int y, int w);
extern int *galois_get_mult_table(int w);
extern int *galois_get_div_table(int w);
extern int *galois_get_log_table(int w);
extern int *galois_get_ilog_table(int w);
void galois_region_xor(           char *r1,         
                                  char *r2,         
                                  char *r3,         
                                  int nbytes);      
void galois_w08_region_multiply(char *region,       
                                  int multby,       
                                  int nbytes,       
                                  char *r2,         
                                  int add);         
void galois_w16_region_multiply(char *region,       
                                  int multby,       
                                  int nbytes,       
                                  char *r2,         
                                  int add);         
void galois_w32_region_multiply(char *region,       
                                  int multby,       
                                  int nbytes,       
                                  char *r2,         
                                  int add);         